--- a/livello coding challenge project/docker-compose.yml
+++ b/livello coding challenge project/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     depends_on:
       - mqtt-broker
     volumes:
+      - ./mqtt:/app/mqtt
       - ./mqtt_data.db:/app/mqtt_data.db
     command: ["python", "MQTT_script.py"]
     environment:
